2000-02-19  Matt Loper  <matt@helixcode.com>
 
	* libical/src/test/.cvsignore: Added Makefile.

	* libical/.cvsignore: Added Makefile, configure, config.status.

	* libical/src/.cvsignore: New file.

	* libical/Makefile: autogenerated file removed from cvs.
	* libical/configure: same. 
	* libical/config.status: same.
	* libical/src/Makefile: same.
	* libical/src/test/Makefile: same.

	* widgets/e-minicard/.cvsignore: Added minicard-label-test,
	minicard-test, and reflow-test.

	* shell/.cvsignore: added files autogenerated from Evolution.idl.

	* libversit/.cvsignore: Added .libs, vcc.c, vcc.lo, vobject.lo,
	vcaltmp.lo, libversit.la

	* libical/src/test/.cvsignore: New file.

	* libical/src/libical/.cvsignore: New file.

	* libical/src/libicalss/.cvsignore: New file.

	* libical/.cvsignore: New file, with config.log in it.

	* tests/ui-tests/message-browser.c: minor cleanup.

	* tests/ui-tests/.cvsignore: added message-browser.

2000-02-18  NotZed  <NotZed@HelixCode.com>

	* tests/test11.c (main): Use a relative path to the mbox provider
	module.

2000-02-18  Dan Winship  <danw@helixcode.com>

	* camel/camel-types.h: New header with the typedefs for all camel
	classes. Now the class headers can just include this and the
	header for the parent type. This makes it possible for
	CamelService to include a CamelSession without creating an
	#include loop.

	* camel/*:	
	* composer/e-msg-composer-attachment-bar.h:
	* mail/folder-browser.c:
	* mail/message-list.c: frob #includes to match the new reality

2000-02-18  Matt Loper  <matt@helixcode.com>

	* tests/ui-tests/message-browser.c (filename_to_camel_msg): Call
	camel_data_wrapper_set_input_stream, rather than
	camel_data_wrapper_construct_from_stream.  For the whole message,
	allow someone to see the header ("to", "from", etc.).  Clicking on
	tree items to see their elements, now works also.

2000-02-18  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* configure.in: Make gnomeui the last library on the command line,