@@ -1,5 +1,8 @@
 2000-02-19  Matt Loper  <matt@helixcode.com>
- 
+
+	* tests/ui-tests/message-browser.c (on_link_clicked): When a link
+	is clicked, indicate the link with a dialog.
+
 	* libical/src/test/.cvsignore: Added Makefile.
 
 	* libical/.cvsignore: Added Makefile, configure, config.status.
